Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119525

error: field ‘responseHeaders’ has incomplete type ‘QMultiMap<QByteArray, QByteArray>’

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.6.2, 6.7.0 FF
    • 6.6.2, 6.7.0 FF
    • WebEngine
    • None
    • 4a8702d63 (dev), 3cb46a5fc (6.6)

    Description

      /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.h:204:43: error: field ‘responseHeaders’ has incomplete type ‘QMultiMap<QByteArray, QByteArray>’
        204 |         QMultiMap<QByteArray, QByteArray> responseHeaders;
            |                                           ^~~~~~~~~~~~~~~
      In file included from /home/qt/work/install/target/include/QtCore/qtypeinfo.h:9,
                       from /home/qt/work/install/target/include/QtCore/qglobal.h:47,
                       from /home/qt/work/qt/qtwebengine/src/core/build_config_qt.h:7,
                       from /home/qt/work/qt/qtwebengine/src/core/net/webui_controller_factory_qt.cpp:11:
      /home/qt/work/install/target/include/QtCore/qcontainerfwd.h:23:43: note: declaration of ‘class QMultiMap<QByteArray, QByteArray>’
         23 | template <typename Key, typename T> class QMultiMap;
            |                                           ^~~~~~~~~
      cc1plus: note: unrecognized command-line option ‘-Wno-stringop-overread’ may have been intended to silence earlier diagnostics
      Sccache command failed, re-try calling build tool directly
      In file included from /home/qt/work/qt/qtwebengine/src/core/devtools_frontend_qt.h:10,
                       from /home/qt/work/qt/qtwebengine/src/core/net/webui_controller_factory_qt.cpp:12:
      /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.h:204:43: error: field ‘responseHeaders’ has incomplete type ‘QMultiMap<QByteArray, QByteArray>’
        204 |         QMultiMap<QByteArray, QByteArray> responseHeaders;
            |                                           ^~~~~~~~~~~~~~~
      In file included from /home/qt/work/install/target/include/QtCore/qtypeinfo.h:9,
                       from /home/qt/work/install/target/include/QtCore/qglobal.h:47,
                       from /home/qt/work/qt/qtwebengine/src/core/build_config_qt.h:7,
                       from /home/qt/work/qt/qtwebengine/src/core/net/webui_controller_factory_qt.cpp:11:
      /home/qt/work/install/target/include/QtCore/qcontainerfwd.h:23:43: note: declaration of ‘class QMultiMap<QByteArray, QByteArray>’
         23 | template <typename Key, typename T> class QMultiMap;
            |                                           ^~~~~~~~~
      cc1plus: note: unrecognized command-line option ‘-Wno-stringop-overread’ may have been intended to silence earlier diagnostics
      [28294/28741] CXX obj/QtWebEngineCore/web_engine_page_host.o
      [28295/28741] CXX obj/QtWebEngineCore/touch_handle_drawable_qt.o
      [28296/28741] CXX obj/QtWebEngineCore/select_file_dialog_factory_qt.o
      [28297/28741] CXX obj/QtWebEngineCore/touch_selection_controller_client_qt.o
      ninja: build stopped: subcommand failed.
      

      Build log: https://testresults.qt.io/logs/qt/qtwebengine/dc87fbe9c06ce9728e0c6b8ce5ac85f98981a570/LinuxUbuntu_22_04x86_64LinuxQEMUarm64GCCqtci-linux-Ubuntu-22.04-x86_64-51-d505adSccache_UseConfigure/014dee0662b27136795337c93904cbfb38b45c0e/build_1704731639/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1704731588

      Tested changes (refs/builds/qtci/dev/1701082823):
      https://codereview.qt-project.org/c/qt/qtwebengine/+/521468/2 Update dependencies on 'dev' in qt/qtwebengine

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            michal Michal Klocek
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes