Fix compilation arm64

Add missing header include.
Do not compile global setting tests as it tests so far
only doh and requires ssl.

Fixes: QTBUG-119525
Change-Id: I011cd3b0ed6e9d5e55e1fc80a102cc7a388681f1
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>